fix: Update terms and conditions text in Hindi

--- a/index.html
+++ b/index.html
@@ -565,9 +565,9 @@
 
         <div class="terms">
             <ul>
-                <li>सामान बदत्लाने की सुविधा केवल 3 दिन तक ही उपलब्ध है।</li>
-                <li>इसके बाद बायतनी केवल 85% मूल्य पर स्वीकार की जाएगी।</li>
-                <li>लोज़ क्नि केचल 75% मूल्य पर ही स्वीकार की जाएगी।</li>
+                <li>सामान बदलने की सुविधा केवल 3 दिनों तक ही उपलब्ध है।</li>
+                <li>इसके बाद वापसी केवल 85% मूल्य पर स्वीकार की जाएगी।</li>
+                <li>लोंग एवं छोटी बाली 75% की ही आती है।</li>
             </ul>
         </div>
 
