--- a/index.html
+++ b/index.html
@@ -380,24 +380,32 @@
 
         /* --- Print Media Query --- */
         @media print {
+            @page {
+                margin: 0;
+                size: A4;
+            }
+
+            html,
             body {
                 background: white;
                 padding: 0;
                 margin: 0;
+                height: 100%;
+                overflow: hidden;
             }
 
             .paper-sheet {
                 width: 100%;
-                height: 100vh;
-                /* Constrain to viewport height (1 page) */
-                max-height: 100vh;
+                height: 100%;
+                max-height: 100%;
                 box-shadow: none;
                 margin: 0;
-                padding: 10px;
+                padding: 8px;
                 overflow: hidden;
-                /* Hide any overflow */
                 page-break-inside: avoid;
                 page-break-after: avoid;
+                transform: scale(0.85);
+                transform-origin: top center;
             }
 
             .screen-controls,
@@ -413,18 +421,29 @@
             input {
                 border-bottom: none !important;
                 padding: 0;
+                font-size: 0.75rem !important;
             }
 
             .section-title {
                 -webkit-print-color-adjust: exact;
                 print-color-adjust: exact;
                 background: #efebe4 !important;
+                padding: 4px 8px !important;
+                font-size: 0.85rem !important;
+                margin-bottom: 4px !important;
             }
 
             th {
                 -webkit-print-color-adjust: exact;
                 print-color-adjust: exact;
                 background: #f7e7ce !important;
+                padding: 3px 2px !important;
+                font-size: 0.65rem !important;
+            }
+
+            td {
+                padding: 2px !important;
+                font-size: 0.65rem !important;
             }
 
             .calc-row.total {
@@ -437,6 +456,51 @@
                 -webkit-print-color-adjust: exact;
                 print-color-adjust: exact;
                 background: #f5f1ea !important;
+                padding: 5px !important;
+                margin-top: 8px !important;
+                font-size: 0.65rem !important;
+            }
+
+            .terms li {
+                margin-bottom: 1px !important;
+            }
+
+            .footer {
+                margin-top: 8px !important;
+                padding-top: 5px !important;
+            }
+
+            .footer-note {
+                margin-top: 6px !important;
+                padding: 4px !important;
+                font-size: 0.9rem !important;
+            }
+
+            .qr-box {
+                width: 80px !important;
+                height: 80px !important;
+            }
+
+            .info-cell {
+                padding: 4px 8px !important;
+            }
+
+            .rough-estimate-divider {
+                margin: 5px 0 !important;
+                font-size: 0.9rem !important;
+            }
+
+            header {
+                margin-bottom: 5px !important;
+            }
+
+            .logo-img {
+                max-width: 90px !important;
+            }
+
+            .brand-address {
+                font-size: 0.8rem !important;
+                margin-top: 4px !important;
             }
 
             ::-webkit-input-placeholder {
@@ -446,12 +510,6 @@
             /* Prevent page breaks */
             * {
                 page-break-inside: avoid !important;
-            }
-
-            /* Scale down content to fit one page */
-            .paper-sheet {
-                transform: scale(0.95);
-                transform-origin: top center;
             }
         }
 
@@ -550,41 +608,6 @@
 
             .footer-note {
                 font-size: 1rem;
-            }
-        }
-
-        /* --- Mobile Print Optimization --- */
-        @media print {
-            .paper-sheet {
-                transform: scale(0.9);
-                transform-origin: top center;
-                padding: 8px !important;
-            }
-
-            th,
-            td {
-                padding: 3px 2px !important;
-                font-size: 0.7rem !important;
-            }
-
-            .section-title {
-                padding: 4px 8px !important;
-                font-size: 0.9rem !important;
-                margin-bottom: 5px !important;
-            }
-
-            .terms {
-                padding: 6px !important;
-                margin-top: 10px !important;
-            }
-
-            .footer {
-                margin-top: 10px !important;
-            }
-
-            .footer-note {
-                margin-top: 8px !important;
-                padding: 5px !important;
             }
         }
     </style>
